Update CNAB airgap example
This updates the airgap example to demonstrate how to include referenced
images in the bundle when it is archived to a tgz, and how to update
your manifests to use the new image location after the images are
published on the other side of the airgap.

With helm's set command this is a bit easier to accomplish, here is an
example bundle that uses helm:

https://github.com/getporter/porter/tree/main/examples/airgap

I am using yq to help modify the manifest. I think kustomize can do it
as well.

Signed-off-by: Carolyn Van Slyck <me@carolynvanslyck.com>

--- a/delivery/CNABwithPorter/Dockerfile.tmpl
+++ b/delivery/CNABwithPorter/Dockerfile.tmpl
@@ -2,7 +2,11 @@ FROM debian:stretch
 
 ARG BUNDLE_DIR
 
-RUN apt-get update && apt-get install -y ca-certificates
+RUN apt-get update && apt-get install -y ca-certificates curl
+
+# Install yq
+RUN curl -sLo /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 && \
+    chmod +x /usr/local/bin/yq
 
 # This is a template Dockerfile for the bundle's invocation image
 # You can customize it to use different base images, install tools and copy configuration files.
@@ -19,4 +23,3 @@ RUN apt-get update && apt-get install -y ca-certificates
 
 # Use the BUNDLE_DIR build argument to copy files into the bundle
 COPY . $BUNDLE_DIR
-COPY ./manifests /cnab/app/manifests/hello-server
