--- a/hello-server/static/custom.css
+++ b/hello-server/static/custom.css
@@ -1,13 +1,23 @@
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #fff;
+}
+div {
+  text-align: center;
+}
+main{
+  text-align: center;
+}
+
+img {
+  width: 40%;
+  margin: auto;
+  display: block;
 }
 
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  color: #000;
 }
